RESOLVED FIXED41496
Computed style is not implemented for padding-start, padding-end, margin-start, margin-end
https://bugs.webkit.org/show_bug.cgi?id=41496
Summary Computed style is not implemented for padding-start, padding-end, margin-star...
Erik Arvidsson
Reported 2010-07-01 17:44:55 PDT
I'm adding support for padding-end and margin-end in bug 25761 and I noticed that computed style is not implemented for these properties. I'll implement this after bug 25761 has landed.
Attachments
Patch (14.59 KB, patch)
2010-07-08 19:56 PDT, Erik Arvidsson
no flags
Patch for landing (11.29 KB, patch)
2010-07-09 16:45 PDT, Erik Arvidsson
no flags
Erik Arvidsson
Comment 1 2010-07-08 19:56:01 PDT
Erik Arvidsson
Comment 2 2010-07-08 20:00:48 PDT
I wasn't sure where to put the helper function, resolveDirectionAwareProperty. Suggestions welcome.
Darin Adler
Comment 3 2010-07-09 15:33:32 PDT
Comment on attachment 60999 [details] Patch I’m a little worried that the serialized form of all CSS properties will include redundant values and that will be some sort of problems. THe same value as both margin-left and margin-start, for example. Clearly when getting one particular property this is right. WebCore/ChangeLog:9 + (WebCore::): Please avoid adding lines like this to ChangeLog.
Erik Arvidsson
Comment 4 2010-07-09 15:47:42 PDT
(In reply to comment #3) > (From update of attachment 60999 [details]) > I’m a little worried that the serialized form of all CSS properties will include redundant values and that will be some sort of problems. THe same value as both margin-left and margin-start, for example. Clearly when getting one particular property this is right. Fair point. I also see that we do not include shorthands in this list. I'll remove the direction aware properties from computedProperties.
Erik Arvidsson
Comment 5 2010-07-09 16:45:24 PDT
Created attachment 61113 [details] Patch for landing
WebKit Commit Bot
Comment 6 2010-07-09 21:08:43 PDT
Comment on attachment 61113 [details] Patch for landing Clearing flags on attachment: 61113 Committed r63038: <http://trac.webkit.org/changeset/63038>
WebKit Commit Bot
Comment 7 2010-07-09 21:08:49 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.