2010-07-09  Erik Arvidsson  <arv@chromium.org>

Reviewed by Darin Adler.

        Computed style is not implemented for padding-start, padding-end, margin-start, margin-end
        https://bugs.webkit.org/show_bug.cgi?id=41496

        * fast/css/margin-start-end-expected.txt:
        * fast/css/padding-start-end-expected.txt:
        * fast/css/script-tests/margin-start-end.js: Added tests for computed style.
        * fast/css/script-tests/padding-start-end.js: Added tests for computed style.
2010-07-09  Erik Arvidsson  <arv@chromium.org>

        Reviewed by Darin Adler.

        Computed style is not implemented for padding-start, padding-end, margin-start, margin-end
        https://bugs.webkit.org/show_bug.cgi?id=41496

        * css/CSSComputedStyleDeclaration.cpp:
        (WebCore::CSSComputedStyleDeclaration::getPropertyCSSValue):
        * css/CSSProperty.cpp:
        (WebCore::CSSProperty::resolveDirectionAwareProperty): This function resolves the property ID for a direction aware property.
        * css/CSSProperty.h:
        * css/CSSStyleSelector.cpp: Use helper function.
        (WebCore::CSSStyleSelector::applyProperty):

Canonical link: https://commits.webkit.org/53906@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@63038 268f45cc-cd09-0410-ab3c-d52691b4dbfc