WebCore/css/CSSComputedStyleDeclaration.cpp
@@ -683,6 +683,8 @@ PassRefPtr<CSSValue> CSSComputedStyleDeclaration::getPropertyCSSValue(int proper
     if (!style)
         return 0;
 
+    propertyID = CSSProperty::resolveDirectionAwareProperty(propertyID, style->direction());
+
     switch (static_cast<CSSPropertyID>(propertyID)) {
         case CSSPropertyInvalid:
             break;
@@ -1469,8 +1471,6 @@ PassRefPtr<CSSValue> CSSComputedStyleDeclaration::getPropertyCSSValue(int proper
         case CSSPropertyWebkitMask:
         case CSSPropertyWebkitMaskRepeatX:
         case CSSPropertyWebkitMaskRepeatY:
-        case CSSPropertyWebkitPaddingEnd:
-        case CSSPropertyWebkitPaddingStart:
         case CSSPropertyWebkitPerspectiveOriginX:
         case CSSPropertyWebkitPerspectiveOriginY:
         case CSSPropertyWebkitTextStroke:
